public/css/views/home.less
.homepage-intro,
.homepage-featured-voices,
.homepage-organization-cards,
.homepage-category-list {
  padding-left: @cv-sidebar-width;
  padding-right: 2rem;
}

.homepage-heading-wrapper {
  margin-bottom: 30px;
  padding-bottom: 5px;
  border-bottom: 1px solid @color-neutral-light;

  .homepage-heading {
    font-size: 30px;
    margin: 0;
    &:extend(.-font-bold);
  }
}

/* =========================================================================== *
 *  intro
 * =========================================================================== */
.homepage-intro {
  padding-top: 65px;
  padding-bottom: 110px;
  background-color: #fff;
  background-image: url("/img/views/home/illustration-30-b.jpg");
  background-position: 125% 50%;
  background-repeat: no-repeat;
  background-size: 60%;

  .intro-description {
    font-size: 17px;
    margin-bottom: 60px;
    width: 45vw;
  }

  .intro-description-text {
    font-size: 1em;
  }

  .stats {
    font-size: 1rem;
    margin-bottom: 60px;

    &-col {
      padding-right: 1.5em;
    }

    &-number {
      font-size: 1.538em;
      text-align: left;
    }

    &-label {
      font-size: 1em;
    }
  }
}

.homepage-intro-banner {
  font-size: 1rem;

  .intro-heading {
    font-size: 2.308em;
  }

  .intro-sub-heading {
    font-size: 6.154em;
    line-height: 1em;
    letter-spacing: -4px;
  }
}

@media (min-width: 1300px) {
  .homepage-intro {
    .homepage-intro-banner,
    .intro-description-text,
    .stats {font-size: 1.25em}
  }
}

@media (min-width: 1500px) {
  .homepage-intro {
    .homepage-intro-banner,
    .intro-description-text,
    .stats {font-size: 1.4em}
  }
}

/* =========================================================================== *
 *  featured voices
 * =========================================================================== */
.homepage-featured-voices {
  padding-bottom: 30px;

  .homepage-featured-voices-container {
    margin: 0 -25px;
  }

  .cv-voice-cover {
    display: inline-block;
    padding: 0 25px 40px;
  }

  .heading-right {
    padding-top: 1rem;
  }
}

/* =========================================================================== *
 *  category list
 * =========================================================================== */
.homepage-category-list {
  padding-top: 64px;
  padding-bottom: 100px;
  background-color: @color-neutral-xx-light;
}

.homepage-category-list-heading {
  font-size: 40px;
  line-height: 55px;
  margin: 0 auto 50px;
  max-width: 800px;
}

.homepage-category-list-item {
  float: left;
  width: 33.333%;
  padding-bottom: 100px;
  text-align: center;

  .categories_link {
    display: inline-block;
    color: @color-neutral-xx-dark;
  }

  .homepage-category-cover {
    width: 96px;
    height: 96px;
    background-size: 100%;
    background-repeat: no-repeat;
  }

  .categories_link-wrapper {
    padding-top: 35px;
  }

  .categories_title {
    font-size: 18px;
    &:extend(.-text-center);
  }
}

.homepage-category-list-cta {
  .cv-button {
    display: inline-block;
    padding-top: 16px;
   }
}

/* =========================================================================== *
 *  organization cards
 * =========================================================================== */
.homepage-organization-cards {
  padding-top: 100px;
  padding-bottom: 80px;

  .widget-card {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

